--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -56,8 +56,7 @@
                 <table id="order-table" class="table table-striped nowrap" style="width:100%">
                     <thead>
                         <tr>
-                            <!-- <th>序號</th> -->
-                            <th>ID</th>
+                            <th>訂單編號</th>
                             <th>訂購人</th>
                             <th>收件人</th>
                             <th>付款方式</th>
@@ -69,96 +68,93 @@
                             <th>編輯</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <!-- <td>1</td> -->
-                            <td>1</td>
-                            <td>A小姐</td>
-                            <td>B先生</td>
-                            <td>取貨付款</td>
-                            <td>全家取貨</td>
-                            <td>2023/08/03</td>
-                            <td>2023/08/04</td>
-                            <td>配送中</td>
-                            <td>
-                                <a href="#">
-                                    <button class="detail_input" data-bs-toggle="modal"
-                                            href="#orderDetailModalToggle" role="button">
-                                        訂單明細
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <a href="#">
-                                    <button class="btn" data-bs-toggle="modal"
-                                            href="#exampleModalToggle" role="button">
-                                        <i class="fas fa-edit"></i>
-                                    </button>
-                                </a>
-                            </td>
-                        </tr>
+                    @*                     <tbody>
+                    <tr>
+                    <td>1</td>
+                    <td>A小姐</td>
+                    <td>B先生</td>
+                    <td>取貨付款</td>
+                    <td>全家取貨</td>
+                    <td>2023/08/03</td>
+                    <td>2023/08/04</td>
+                    <td>配送中</td>
+                    <td>
+                    <a href="#">
+                    <button class="detail_input" data-bs-toggle="modal"
+                    href="#orderDetailModalToggle" role="button">
+                    訂單明細
+                    </button>
+                    </a>
+                    </td>
+                    <td>
+                    <a href="#">
+                    <button class="btn" data-bs-toggle="modal"
+                    href="#exampleModalToggle" role="button">
+                    <i class="fas fa-edit"></i>
+                    </button>
+                    </a>
+                    </td>
+                    </tr>
 
-                        <tr>
-                            <!-- <td>1</td> -->
-                            <td>2</td>
-                            <td>A小姐</td>
-                            <td>B先生</td>
-                            <td>信用卡</td>
-                            <td>7-11取貨</td>
-                            <td>2023/08/03</td>
-                            <td>2023/08/04</td>
-                            <td>配送中</td>
-                            <td>
-                                <a href="#">
-                                    <button class="detail_input" data-bs-toggle="modal"
-                                            href="#orderDetailModalToggle" role="button">
-                                        訂單明細
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <a href="#">
-                                    <button class="btn" data-bs-toggle="modal"
-                                            href="#exampleModalToggle" role="button">
-                                        <i class="fas fa-edit"></i>
-                                    </button>
-                                </a>
-                            </td>
-                        </tr>
+                    <tr>
+                    <td>2</td>
+                    <td>A小姐</td>
+                    <td>B先生</td>
+                    <td>信用卡</td>
+                    <td>7-11取貨</td>
+                    <td>2023/08/03</td>
+                    <td>2023/08/04</td>
+                    <td>配送中</td>
+                    <td>
+                    <a href="#">
+                    <button class="detail_input" data-bs-toggle="modal"
+                    href="#orderDetailModalToggle" role="button">
+                    訂單明細
+                    </button>
+                    </a>
+                    </td>
+                    <td>
+                    <a href="#">
+                    <button class="btn" data-bs-toggle="modal"
+                    href="#exampleModalToggle" role="button">
+                    <i class="fas fa-edit"></i>
+                    </button>
+                    </a>
+                    </td>
+                    </tr>
 
-                        <tr>
-                            <!-- <td>1</td> -->
-                            <td>2</td>
-                            <td>A小姐</td>
-                            <td>B先生</td>
-                            <td>取貨付款</td>
-                            <td>全家 信義店</td>
-                            <td>2023/08/03</td>
-                            <td>2023/08/04</td>
-                            <td>配送中</td>
-                            <td>
-                                <a href="#">
-                                    <button class="detail_input" data-bs-toggle="modal"
-                                            href="#orderDetailModalToggle" role="button">
-                                        訂單明細
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <a href="#">
-                                    <button class="btn" data-bs-toggle="modal"
-                                            href="#exampleModalToggle" role="button">
-                                        <i class="fas fa-edit"></i>
-                                    </button>
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tr>
+                    <!-- <td>1</td> -->
+                    <td>2</td>
+                    <td>A小姐</td>
+                    <td>B先生</td>
+                    <td>取貨付款</td>
+                    <td>全家 信義店</td>
+                    <td>2023/08/03</td>
+                    <td>2023/08/04</td>
+                    <td>配送中</td>
+                    <td>
+                    <a href="#">
+                    <button class="detail_input" data-bs-toggle="modal"
+                    href="#orderDetailModalToggle" role="button">
+                    訂單明細
+                    </button>
+                    </a>
+                    </td>
+                    <td>
+                    <a href="#">
+                    <button class="btn" data-bs-toggle="modal"
+                    href="#exampleModalToggle" role="button">
+                    <i class="fas fa-edit"></i>
+                    </button>
+                    </a>
+                    </td>
+                    </tr>
+                    </tbody> *@
                 </table>
                 <!--表格-->
                 <!--編輯彈出視窗-->
-                <div class="modal fade" id="exampleModalToggle" aria-hidden="true"
-                     aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                <div class="modal fade" id="EditModalToggle" tabindex="-1">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -226,7 +222,7 @@
                 </div>
                 <!--編輯彈出視窗-->
                 <!---詳細資料model-->
-                <div class="modal fade" id="orderDetailModalToggle" aria-hidden="true"
+                <div class="modal fade" id="DetailModalToggle" aria-hidden="true"
                      aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                     <div class="modal-dialog modal-lg modal-dialog-centered">
                         <div class="modal-content">
@@ -322,57 +318,68 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!---詳細資料model-->
-
-
-
-
-
                             </div>
                         </div>
                     </div>
-                    <!---詳細資料model-->
                 </div>
+                <!---詳細資料model-->
             </div>
         </div>
-
     </div>
 
     @section Scripts{
+        <!--日期插件-->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
         <script>
+            //日期插件
             $('input[name="dates"]').daterangepicker();
+
+            //-------------------------------------------------
             $(document).ready(function () {
-                var table = $('#order-table').DataTable({
-                    responsive: true,
+                $.ajax({
+                    url: '@Url.Action("ShowOrderTotal", "Order")',
+                    type: 'GET',
+                    success: function (data) {
+                        console.log(data);
+                    },
+                    error: function () {
+                        console.log("error:" + error);
+                    }
+                });
+
+                //==================datatable
+                $('#order-table').DataTable({
+                    "ajax": '@Url.Action("ShowOrderTotal", "Order")',
+
+                    "columns": [
+                        { data: 'orderId' },
+                        { data: 'memberId' },
+                        { data: 'recipientName' },
+                        { data: 'paymentMethodId' },
+                        { data: 'shippingMethodId' },
+                        { data: 'orderCreationDate' },
+                        { data: 'lastUpdateTime' },
+                        { data: 'orderStatus' },
+                        {
+                            data: null, // 這裡設置為 null，因為我們會在 render 中創建按鈕
+                            render: function (data, type, row, meta) {
+                                return '<button class="detail_input" data-bs-toggle="modal" href="#DetailModalToggle" role="button" data-memberid="' + row.memberId + '">詳細資料</button>';
+                            }
+                        },
+                        {
+                            data: null,
+                            render: function (data, type, row, meta) {
+                                var editButton = '<button class="btn" data-bs-toggle="modal" href="#EditModalToggle" role="button"><i class="fas fa-edit"></i></button>';
+                                return editButton;
+                            }
+                        },
+                    ],
+                    "paging": true, //分頁功能
+                    responsive: true, //RWD
                     "searching": false, //隱藏搜尋框
-                    // 在這裡指定需要過濾的列，假設第一列和第二列需要過濾
-                    columnDefs: [
-                        { targets: 4, searchable: true },
-                        { targets: 5, searchable: true }
-                        // 其他列...
-                    ]
-                });
-
-                // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
-                $('#payList').on('change', function () {
-                    var filterOption1 = $(this).val();
-
-                    // 使用DataTable的column().search()方法進行過濾
-                    table.column(4).search(filterOption1).draw();
-                    // 其他列...
-                });
-
-                $('#deliveryList').on('change', function () {
-                    // var filterOption1 = $('#payList').val();
-                    var filterOption2 = $(this).val();
-
-                    // 使用DataTable的column().search()方法進行過濾
-                    table.column(5).search(filterOption2).draw();
-                    // 其他列...
                 });
             });
         </script>
