--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -1,20 +1,38 @@
 @media only screen {
 
-    .result-container { /*設定抽獎格子*/
-       /* padding-top: 50%;*/
-        grid-template-columns: repeat(5, 70px); /* 5個70px寬的列 */
-        gap: 10px; /* 每個項目之間的間距 */
-        max-width: 500px; /* 最大寬度為600px */
-        width: 100%; /* 使用100%寬度以適應父容器的大小 */
+    .result-container {
+        grid-template-columns: repeat(5, 75px);
+        grid-template-rows: 100px 100px 50px; /* 注意這裡第三行高度為 50px */
+        padding-top: 150px;
+        padding-left: 10px;
+        max-width: 600px;
+        width: 100%;
         height: 100%;
         text-align: center;
         border: 2px solid black;
         background-color: rgba(128, 128, 128, 0.8);
         display: none;
         place-items: center;
+        font-size: 14px;
+        color: #FFFF37;
     }
 
- 
+        .result-container > div:nth-child(1) {
+            grid-row: 2;
+            grid-column: 3;
+        }
+
+        .result-container > div:nth-child(8) {
+            grid-row: 1;
+            grid-column: 1;
+        }
+
+    #Btn_itemOk {
+        grid-row: 3;
+        grid-column: 3;
+    }
+
+
     .gamelayer {
         display: flex;
         justify-content: center;
@@ -32,8 +50,7 @@
         justify-content: center;
         width: 406px; /* 維持canvas的寬度為406px */
         height: 600px; /* 維持canvas的高度為600px */
-      /*  display: none;*/
-       
+        /*  display: none;*/
     }
 
     /*轉蛋畫面*/
@@ -48,7 +65,7 @@
         background-size: cover; /* 設定背景圖片覆蓋整個按鈕 */
         background-position: center; /* 設定背景圖片居中對齊 */
         border: 4px solid black; /* 移除按鈕邊框 */
-        justify-content:center;
+        justify-content: center;
     }
 
     .Gatchagif {
@@ -75,7 +92,7 @@
     }
 
     .catcha {
-        margin-left:-70px;
+        margin-left: -70px;
         height: 600px;
         width: 506px;
     }
@@ -91,6 +108,7 @@
     }
 
     #CanvasRank {
+        padding-top: 76px;
         position: absolute;
         text-align: center;
         justify-content: center;
@@ -98,6 +116,50 @@
         height: 600px; /* 維持canvas的高度為600px */
         background-color: rgba(0, 0, 0, 0.5);
         display: none;
+    }
+    /* 網頁捲軸【寬度】 */
+    /*::-webkit-scrollbar {
+        width: 30px;
+    }*/
+
+    /* 網頁捲軸【背景】顏色 */
+    /*::-webkit-scrollbar-track {
+        background: #437c97;
+    }*/
+
+    /* 網頁捲軸【把手】顏色 */
+    /*::-webkit-scrollbar-thumb {
+        background: #c7bba5;
+        border-radius: 
+    }*/
+
+    /* 網頁捲軸【滑過時】把手的顏色 */
+    /*::-webkit-scrollbar-thumb:hover {
+            background: #fff;
+        }*/
+    #rank-container {
+        font-family: 微軟正黑體;
+        height: 450px;
+        overflow-y: auto;
+        padding: 5px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        background: white;
+        margin: 10px;
+    }
+
+    #rankpage-title {
+        font-family: 微軟正黑體;
+        font-size: 22px;
+        position: absolute;
+        top: 4%;
+        color: floralwhite;
+        background-image: url('/images/game/rankTitleBack.png');
+        background-size: cover; /* 設定背景圖片覆蓋整個按鈕 */
+        background-position: center; /* 設定背景圖片居中對齊 */
+        width: 170px;
+        height: 38px;
     }
 
     #Canvasrungame {
@@ -149,6 +211,7 @@
 
 
     #popup {
+        font-family: 微軟正黑體;
         position: absolute;
         text-align: center;
         justify-content: center;
@@ -156,7 +219,7 @@
         width: 406px; /* 維持canvas的寬度為406px */
         height: 600px; /* 維持canvas的高度為600px */
         display: none;
-        z-index:99;
+        z-index: 99;
     }
 
     /*.animation-container {
@@ -165,7 +228,7 @@
         justify-content: center;
         background-color: rgba(0, 0, 0, 0.5);
         width: 406px;*/ /* 維持canvas的寬度為406px */
-        /*height: 600px;*/ /* 維持canvas的高度為600px */
+    /*height: 600px;*/ /* 維持canvas的高度為600px */
 
     /*}*/
     .canvas-container {
@@ -180,17 +243,17 @@
 
 
     #commonbackBTN {
-    background: transparent;
-    width: 57px; /* 設定按鈕寬度 */
-    height: 50px; /* 設定按鈕高度 */
-    background-image: url('/images/game/Icon_ArrowLeft.png'); /* 設定背景圖片路徑 */
-    background-size: cover; /* 設定背景圖片覆蓋整個按鈕 */
-    background-position: center; /* 設定背景圖片居中對齊 */
-    border: none; /* 移除按鈕邊框 */
-    position: absolute;
-    left: 5%;
-    top: -405%;
-}
+        background: transparent;
+        width: 57px; /* 設定按鈕寬度 */
+        height: 50px; /* 設定按鈕高度 */
+        background-image: url('/images/game/Icon_ArrowLeft.png'); /* 設定背景圖片路徑 */
+        background-size: cover; /* 設定背景圖片覆蓋整個按鈕 */
+        background-position: center; /* 設定背景圖片居中對齊 */
+        border: none; /* 移除按鈕邊框 */
+        position: absolute;
+        left: 5%;
+        top: -405%;
+    }
 
 
     .btn-content {
@@ -217,84 +280,88 @@
         cursor: pointer;
     }
 }
-@media (max-width: 767px){
 
-        .gamelayer{
+@media (max-width: 767px) {
+
+    .gamelayer {
         display: flex;
         justify-content: center;
         position: relative;
-        
-        }
-        canvas {
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-        /* 遊戲畫面 */
-        #Canvaslobby{
-          text-align:center;
-          position: relative;
-          justify-content: center;
-          width:100%;
-          /* display: none; */
-          }
-        #CanvasCheckIn{
-            position: absolute;
-            text-align:center;
-            justify-content: center;
-            width:100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: none;
-          }  
-          #CanvasRank{
-            position: absolute;
-            text-align:center;
-            justify-content: center;
-            width:100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: none;
-          }
-       
-        #Canvasrungame{
-          text-align:center;
-          position: relative;
-          justify-content: center;
-          width:100%;
-          display: none;
-         } 
-        #CanvasGatcha{
-          text-align:center;
-          position: relative;
-          justify-content: center;
-          width:100%;
-          display: none;
-       }
+    }
 
-       #CanvasStore{
-        text-align:center;
+    canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    /* 遊戲畫面 */
+    #Canvaslobby {
+        text-align: center;
         position: relative;
         justify-content: center;
-        width:100%;
-        display: none;
+        width: 100%;
+        /* display: none; */
+    }
 
-       }
-       #CanvasDoubleCheck{
+    #CanvasCheckIn {
         position: absolute;
-        text-align:center;
+        text-align: center;
         justify-content: center;
-        width:100%;
+        width: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         display: none;
-        
-       }
-       #CanvasSummonResult{
+    }
+
+    #CanvasRank {
         position: absolute;
-        text-align:center;
+        text-align: center;
         justify-content: center;
-        width:100%;
+        width: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         display: none;
-       }
+    }
+
+    #Canvasrungame {
+        text-align: center;
+        position: relative;
+        justify-content: center;
+        width: 100%;
+        display: none;
+    }
+
+    #CanvasGatcha {
+        text-align: center;
+        position: relative;
+        justify-content: center;
+        width: 100%;
+        display: none;
+    }
+
+    #CanvasStore {
+        text-align: center;
+        position: relative;
+        justify-content: center;
+        width: 100%;
+        display: none;
+    }
+
+    #CanvasDoubleCheck {
+        position: absolute;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: none;
+    }
+
+    #CanvasSummonResult {
+        position: absolute;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: none;
+    }
 
     #popup {
         position: relative;
@@ -306,26 +373,26 @@
         display: none;
         z-index: 99;
     }
-        /* .canvas-container {
+    /* .canvas-container {
           width: 90%;
           display: flex;
           justify-content: center;  
   
       } */
-      .btn-content{
-          display: flex;
-          flex-direction: column;
-          height: 50px;
-          justify-content: space-around;
-        }
-
-      .btns{
+    .btn-content {
         display: flex;
-        justify-content: center;  
-        margin: 5px 0 0 0;
-      } 
+        flex-direction: column;
+        height: 50px;
+        justify-content: space-around;
+    }
 
-      .btn{
+    .btns {
+        display: flex;
+        justify-content: center;
+        margin: 5px 0 0 0;
+    }
+
+    .btn {
         width: 105px;
         padding: 5px 5px;
         background-color: #f0cf75;
@@ -334,10 +401,5 @@
         border-radius: 5px;
         margin: 0px 5px;
         cursor: pointer;
-      }
-      }
-
-
-
-
-    
+    }
+}
