--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/login.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/login.css
@@ -1,6 +1,6 @@
 ﻿/*容器垂直置中*/
 body {
-    height: 100vh;
+    height: 100%;
     /* 設定容器高度為視窗高度，確保垂直置中的效果 */
     /*display: flex;*/
     justify-content: center;
