--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -502,6 +502,9 @@
 @section Scripts{
 
     <!-- ALL JS FILES -->
+    <!-- 首頁跑版 -->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- 原首頁下拉選單消失問題少了下面這個: -->
     <script src="~/js/jquery-3.2.1.min.js"></script>
@@ -511,14 +514,12 @@
     <script src="~/js/review.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/js/star-rating.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/js/locales/LANG.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-star-rating@4.1.2/js/star-rating.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/themes/krajee-fas/theme.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
-    <script src="~/js/custom-home-details-wishlist.js"></script>
     <!-- ALL PLUGINS -->
     <script src="~/js/jquery.superslides.min.js"></script>
     <script src="~/js/bootstrap-select.js"></script>
@@ -531,111 +532,114 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
+
     <script>
-        $('.kv-ltr-theme-fas-star').rating({
-            hoverOnClear: false,
-            theme: 'krajee-fas',
-            containerClass: 'is-star',
-            disabled: true
-        });
-        $(function () {
-            var INDEX = 0;
-            $("#chat-submit").click(function (e) {
-                e.preventDefault();
-                var msg = $("#chat-input").val();
-                if (msg.trim() == '') {
-                    return false;
-                }
-                generate_message(msg, 'self');
-                var buttons = [
-                    {
-                        name: 'Existing User',
-                        value: 'existing'
-                    },
-                    {
-                        name: 'New User',
-                        value: 'new'
-                    }
-                ];
-                setTimeout(function () {
-                    generate_message(msg, 'user');
-                }, 1000)
+    //     $('.kv-ltr-theme-fas-star').rating({
+    //         hoverOnClear: false,
+    //         theme: 'krajee-fas',
+    //         containerClass: 'is-star',
+    //         disabled: true
+    //     });
+    //     $(function () {
+    //         var INDEX = 0;
+    //         $("#chat-submit").click(function (e) {
+    //             e.preventDefault();
+    //             var msg = $("#chat-input").val();
+    //             if (msg.trim() == '') {
+    //                 return false;
+    //             }
+    //             generate_message(msg, 'self');
+    //             var buttons = [
+    //                 {
+    //                     name: 'Existing User',
+    //                     value: 'existing'
+    //                 },
+    //                 {
+    //                     name: 'New User',
+    //                     value: 'new'
+    //                 }
+    //             ];
+    //             setTimeout(function () {
+    //                 generate_message(msg, 'user');
+    //             }, 1000)
 
-            })
+    //         })
 
-            function generate_message(msg, type) {
-                INDEX++;
-                var str = "";
-                str += "<div id='cm-msg-" + INDEX + "' class=\"chat-msg " + type + "\">";
-                str += "          <span class=\"msg-avatar\">";
-                str += "            <img src=\"https:\/\/image.crisp.im\/avatar\/operator\/196af8cc-f6ad-4ef7-afd1-c45d5231387c\/240\/?1483361727745\">";
-                str += "          <\/span>";
-                str += "          <div class=\"cm-msg-text\">";
-                str += msg;
-                str += "          <\/div>";
-                str += "        <\/div>";
-                $(".chat-logs").append(str);
-                $("#cm-msg-" + INDEX).hide().fadeIn(300);
-                if (type == 'self') {
-                    $("#chat-input").val('');
-                }
-                $(".chat-logs").stop().animate({ scrollTop: $(".chat-logs")[0].scrollHeight }, 1000);
-            }
+    //         function generate_message(msg, type) {
+    //             INDEX++;
+    //             var str = "";
+    //             str += "<div id='cm-msg-" + INDEX + "' class=\"chat-msg " + type + "\">";
+    //             str += "          <span class=\"msg-avatar\">";
+    //             str += "            <img src=\"https:\/\/image.crisp.im\/avatar\/operator\/196af8cc-f6ad-4ef7-afd1-c45d5231387c\/240\/?1483361727745\">";
+    //             str += "          <\/span>";
+    //             str += "          <div class=\"cm-msg-text\">";
+    //             str += msg;
+    //             str += "          <\/div>";
+    //             str += "        <\/div>";
+    //             $(".chat-logs").append(str);
+    //             $("#cm-msg-" + INDEX).hide().fadeIn(300);
+    //             if (type == 'self') {
+    //                 $("#chat-input").val('');
+    //             }
+    //             $(".chat-logs").stop().animate({ scrollTop: $(".chat-logs")[0].scrollHeight }, 1000);
+    //         }
 
-            function generate_button_message(msg, buttons) {
-                /* Buttons should be object array
-                  [
-                    {
-                      name: 'Existing User',
-                      value: 'existing'
-                    },
-                    {
-                      name: 'New User',
-                      value: 'new'
-                    }
-                  ]
-                */
-                INDEX++;
-                var btn_obj = buttons.map(function (button) {
-                    return "              <li class=\"button\"><a href=\"javascript:;\" class=\"btn btn-primary chat-btn\" chat-value=\"" + button.value + "\">" + button.name + "<\/a><\/li>";
-                }).join('');
-                var str = "";
-                str += "<div id='cm-msg-" + INDEX + "' class=\"chat-msg user\">";
-                str += "          <span class=\"msg-avatar\">";
-                str += "            <img src=\"https:\/\/image.crisp.im\/avatar\/operator\/196af8cc-f6ad-4ef7-afd1-c45d5231387c\/240\/?1483361727745\">";
-                str += "          <\/span>";
-                str += "          <div class=\"cm-msg-text\">";
-                str += msg;
-                str += "          <\/div>";
-                str += "          <div class=\"cm-msg-button\">";
-                str += "            <ul>";
-                str += btn_obj;
-                str += "            <\/ul>";
-                str += "          <\/div>";
-                str += "        <\/div>";
-                $(".chat-logs").append(str);
-                $("#cm-msg-" + INDEX).hide().fadeIn(300);
-                $(".chat-logs").stop().animate({ scrollTop: $(".chat-logs")[0].scrollHeight }, 1000);
-                $("#chat-input").attr("disabled", true);
-            }
+    //         function generate_button_message(msg, buttons) {
+    //             /* Buttons should be object array
+    //               [
+    //                 {
+    //                   name: 'Existing User',
+    //                   value: 'existing'
+    //                 },
+    //                 {
+    //                   name: 'New User',
+    //                   value: 'new'
+    //                 }
+    //               ]
+    //             */
+    //             INDEX++;
+    //             var btn_obj = buttons.map(function (button) {
+    //                 return "              <li class=\"button\"><a href=\"javascript:;\" class=\"btn btn-primary chat-btn\" chat-value=\"" + button.value + "\">" + button.name + "<\/a><\/li>";
+    //             }).join('');
+    //             var str = "";
+    //             str += "<div id='cm-msg-" + INDEX + "' class=\"chat-msg user\">";
+    //             str += "          <span class=\"msg-avatar\">";
+    //             str += "            <img src=\"https:\/\/image.crisp.im\/avatar\/operator\/196af8cc-f6ad-4ef7-afd1-c45d5231387c\/240\/?1483361727745\">";
+    //             str += "          <\/span>";
+    //             str += "          <div class=\"cm-msg-text\">";
+    //             str += msg;
+    //             str += "          <\/div>";
+    //             str += "          <div class=\"cm-msg-button\">";
+    //             str += "            <ul>";
+    //             str += btn_obj;
+    //             str += "            <\/ul>";
+    //             str += "          <\/div>";
+    //             str += "        <\/div>";
+    //             $(".chat-logs").append(str);
+    //             $("#cm-msg-" + INDEX).hide().fadeIn(300);
+    //             $(".chat-logs").stop().animate({ scrollTop: $(".chat-logs")[0].scrollHeight }, 1000);
+    //             $("#chat-input").attr("disabled", true);
+    //         }
 
-            $(document).delegate(".chat-btn", "click", function () {
-                var value = $(this).attr("chat-value");
-                var name = $(this).html();
-                $("#chat-input").attr("disabled", false);
-                generate_message(name, 'self');
-            })
+    //         $(document).delegate(".chat-btn", "click", function () {
+    //             var value = $(this).attr("chat-value");
+    //             var name = $(this).html();
+    //             $("#chat-input").attr("disabled", false);
+    //             generate_message(name, 'self');
+    //         })
 
-            $("#chat-circle").click(function () {
-                $("#chat-circle").toggle('scale');
-                $(".chat-box").toggle('scale');
-            })
+    //         $("#chat-circle").click(function () {
+    //             $("#chat-circle").toggle('scale');
+    //             $(".chat-box").toggle('scale');
+    //         })
 
-            $(".chat-box-toggle").click(function () {
-                $("#chat-circle").toggle('scale');
-                $(".chat-box").toggle('scale');
-            })
+    //         $(".chat-box-toggle").click(function () {
+    //             $("#chat-circle").toggle('scale');
+    //             $(".chat-box").toggle('scale');
+    //         })
 
-        })
-    </script>
+    //     })
+    // </script>
+    <script src="~/js/custom-home-details-wishlist.js"></script>
+
 }
